# rdna3-kawpow-miner

./: .dockerignore  .gitignore  CLAUDE.md  README.md  benchmark.bat  mine-rust.bat  mine.bat  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.hiveos
hiveos/: README.md  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
rdna3_kawpow/: __init__.py  __main__.py  constants.py  dagcache.py  ethash.py  keccak.py  miner.py  progpow.py  reference.py  shader_compiler.py  stratum.py  vkhost.py
rdna3_kawpow/shaders/: ethash_dag.comp  progpow_search.comp.tmpl
rust/: Cargo.toml
rust/src/: constants.rs  dagcache.rs  ethash.rs  keccak.rs  lib.rs  main.rs  miner.rs  progpow.rs  reference.rs  shader_compiler.rs  stats.rs  stratum.rs  vkhost.rs
rust/tests/: dagcache.rs  gpu_dag_cache.rs  gpu_search.rs  ir_differential.rs  vectors.rs
rust/tests/fixtures/: ir.json
rust/tools/: gen_fixtures.py
tests/: test_dagcache.py  test_gpu_dag.py  test_gpu_search.py  test_kawpow_vectors.py  test_reference_vector.py  test_stratum.py
