[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdna3-kawpow"
version = "0.1.0"
description = "RDNA3-optimized KawPow (ProgPoW 0.9.3) GPU miner: Python host + Vulkan compute"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "vulkan>=1.3.275",
    "numpy>=1.24",
    "pycryptodome>=3.20",
]

[project.scripts]
rdna3-kawpow = "rdna3_kawpow.__main__:main"

[tool.setuptools.packages.find]
include = ["rdna3_kawpow*"]

[tool.setuptools.package-data]
rdna3_kawpow = ["shaders/*.comp", "shaders/*.tmpl"]
